
add_executable(hello_thread hello_thread.cpp)

add_executable(hello_mutex hello_mutex.cpp)

add_executable(hello_promise hello_promise.cpp)

add_executable(hello_future hello_future.cpp)

add_executable(hello_semaphore hello_semaphore.cpp)

add_executable(hello_condition_var hello_condition_variable.cpp)
